# consteig

./: .ash_history  .clang-format  .coderabbit.yaml  .env  .gitattributes  .gitignore  .gitmodules  .octave_hist  AGENT.md  CMakeLists.txt  Dockerfile  Dockerfile.ci  LICENSE  Makefile  NOTICE  README.md  ci-entrypoint.sh  conanfile.py  consteig.hpp  consteig_options.hpp  consteig_types.hpp  cross_compile_verify.cpp  docker-compose.yml  docker-entrypoint.sh  entrypoint.sh  improvment.md  instruction.md  issues.md  local-entrypoint.sh  non_sym.md  pr.md  readme.md  state.md  todo.md
.github/workflows/: build-and-test.yml  docker-image.yml  docs.yml  doxygen-polyfill-cve.yml  extended-compilers.yml  main.yml
array/: CMakeLists.txt  array.hpp  array.test.cpp
array/tests/: CMakeLists.txt  array.test.cpp
cmake/: consteigConfig.cmake.in
cmake/toolchains/: arm-none-eabi-clang.cmake  arm-none-eabi-gcc.cmake
docs/: Doxyfile  development.md  getting-started.md  index.md  methods.md  mkdocs.yml  performance.md  verification.md
docs/examples/: butterworth.md  dc-motor.md  population.md
docs/getting-started/: index.md
docs/guide/: configuration.md  decompositions.md  eigensolvers.md  math-functions.md  matrix.md
eigen/: CMakeLists.txt  eigen.hpp  eigenvectors.hpp
eigen/tests/: CMakeLists.txt  comparison_eigen.test.cpp  eigen.test.cpp  eigen_comparison.test.cpp  eigenvectors.test.cpp  eigvals_constexpr.test.cpp  eigvecs_constexpr.test.cpp  generated.test.cpp  generated_cases.hpp  generated_nonsym_0.test.cpp  generated_nonsym_1.test.cpp  generated_nonsym_10.test.cpp  generated_nonsym_11.test.cpp  generated_nonsym_12.test.cpp  generated_nonsym_13.test.cpp  generated_nonsym_14.test.cpp  generated_nonsym_15.test.cpp  generated_nonsym_16.test.cpp  generated_nonsym_17.test.cpp  generated_nonsym_18.test.cpp  generated_nonsym_19.test.cpp  generated_nonsym_2.test.cpp  generated_nonsym_20.test.cpp  generated_nonsym_21.test.cpp  generated_nonsym_22.test.cpp  generated_nonsym_23.test.cpp  generated_nonsym_24.test.cpp  generated_nonsym_25.test.cpp  generated_nonsym_26.test.cpp  generated_nonsym_27.test.cpp  generated_nonsym_28.test.cpp  generated_nonsym_29.test.cpp  generated_nonsym_3.test.cpp  generated_nonsym_30.test.cpp  generated_nonsym_31.test.cpp  generated_nonsym_32.test.cpp  generated_nonsym_33.test.cpp  generated_nonsym_34.test.cpp  generated_nonsym_35.test.cpp  generated_nonsym_36.test.cpp  (+1211 more)
examples/: CMakeLists.txt  butterworth.cpp  butterworth_core.hpp  butterworth_values.cpp  dc_motor_control.cpp  decomp.cpp  eigen.cpp  example_helper.hpp  matrix.cpp  population.cpp  print_butterworth_binary.py
examples/butterworth/: butterworth.cpp  butterworth_core.hpp
include/consteig/: consteig_options.hpp
math/: CMakeLists.txt  complex.hpp  constmath.hpp
math/functions/: abs.hpp  csqrt.hpp  exp.hpp  pow.hpp  sgn.hpp  sqrt.hpp  trig.hpp  utilities.hpp
math/tests/: CMakeLists.txt  abs.test.cpp  complex.test.cpp  exp.test.cpp  pow.test.cpp  sgn.test.cpp  sqrt.test.cpp  trig.test.cpp  utilities.test.cpp
matrix/: CMakeLists.txt  decompositions.hpp  matrix.hpp  matrix_eigen.hpp  matrix_tools.hpp  operations.hpp
matrix/decompositions/: decompositions_helper.hpp  hessenberg.hpp  householder.hpp  lu.hpp  qr.hpp
matrix/tests/: CMakeLists.txt  complex_init.test.cpp  decompositions_helper.test.cpp  hessenberg.test.cpp  hessenberg_eigen.test.cpp  householder.test.cpp  householder_eigen.test.cpp  lu.test.cpp  matrix.test.cpp  operations.test.cpp  operations_eigen.test.cpp  qr.test.cpp  qr_eigen.test.cpp
octave/: dc_motor_control.m  eigen.m  eigen_ds.m  eigen_ds_lsvep.m  generate_char_poly_tests.m  generate_profiling_cases.m  generate_test_cases.m  hessen.m  house.m  house2.m  house3.m  make_matrix.m  mgsqr.m  wilkinsonshift.m
octave/development_scripts/: balance.m  eigen_double_shifted_qr.m  eigen_ds.m  hessen.m  house.m  house_hessenberg.m  poly_ds.m  qr_hessenberg.m  wilkinsonshift.m
profiling/: CMakeLists.txt  README.md  analyze_results.py  generated_profiling_cases.hpp  pyproject.toml  run_profiling.sh
profiling/compile_time/: profile_clustered_10_0.cpp  profile_clustered_10_1.cpp  profile_clustered_10_2.cpp  profile_clustered_10_3.cpp  profile_clustered_10_4.cpp  profile_clustered_10_5.cpp  profile_clustered_10_6.cpp  profile_clustered_10_7.cpp  profile_clustered_10_8.cpp  profile_clustered_10_9.cpp  profile_clustered_12_0.cpp  profile_clustered_12_1.cpp  profile_clustered_12_2.cpp  profile_clustered_12_3.cpp  profile_clustered_12_4.cpp  profile_clustered_12_5.cpp  profile_clustered_12_6.cpp  profile_clustered_12_7.cpp  profile_clustered_12_8.cpp  profile_clustered_12_9.cpp  profile_clustered_14_0.cpp  profile_clustered_14_1.cpp  profile_clustered_14_2.cpp  profile_clustered_14_3.cpp  profile_clustered_14_4.cpp  profile_clustered_14_5.cpp  profile_clustered_14_6.cpp  profile_clustered_14_7.cpp  profile_clustered_14_8.cpp  profile_clustered_14_9.cpp  profile_clustered_16_0.cpp  profile_clustered_16_1.cpp  profile_clustered_16_2.cpp  profile_clustered_16_3.cpp  profile_clustered_16_4.cpp  profile_clustered_16_5.cpp  profile_clustered_16_6.cpp  profile_clustered_16_7.cpp  profile_clustered_16_8.cpp  profile_clustered_16_9.cpp  (+1370 more)
profiling/results/: compile_times_20260324_194427.csv  compile_times_20260324_212550.csv  compile_times_c++_15.2.0.csv  compile_times_gcc_15.2.0.csv
scripts/: vendor_gcem.sh
test_dependencies/: CMakeLists.txt  eigen_test_tools.hpp  generated_cases.hpp  test_tools.hpp
test_dependencies/gtest_stubs/gtest/: gtest.h
test_package/: conanfile.py  test_package.cpp
tests/: CMakeLists.txt
tests/eigen/: CMakeLists.txt  comparison_eigen.test.cpp  eigvals_constexpr.test.cpp  eigvecs_constexpr.test.cpp  generated_nonsym_1.test.cpp  generated_nonsym_14.test.cpp  generated_nonsym_15.test.cpp  generated_nonsym_17.test.cpp  generated_nonsym_20.test.cpp  generated_nonsym_22.test.cpp  generated_nonsym_23.test.cpp  generated_nonsym_24.test.cpp  generated_nonsym_25.test.cpp  (+197 more)
tests/math/: CMakeLists.txt  exp.test.cpp  math_backend.test.cpp  trig.test.cpp
(+27 files in other folders)
